Fix some layout issues and build out band show more

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,3 +32,7 @@ h2 {
 h3 {
   @apply text-xl;
 }
+
+.fill-screen {
+  min-height: calc(100vh - 9rem);
+}
